fixed minor padding issues on mobile

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -107,13 +107,13 @@ i.downArrow {
 
 @media only screen and (max-width: 700px) {
     .title {
-        font-size: 1.8rem !important;
+        font-size: 1.5rem !important;
     }
     #intro1 {
-        font-size: 2rem;
+        font-size: 1.6rem;
     }
     #intro2 {
-        font-size: 1.7rem;
+        font-size: 1.2rem;
         margin-bottom: 50px;
     }
     .aboutWrapper {
